[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-migration-env"
version = "0.1.0"
description = "OpenEnv environment for SQL migration review and validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "openai"
  ,"requests"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["models", "client"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]